--- a/config.toml
+++ b/config.toml
@@ -1,121 +1,59 @@
 baseURL = "https://hyacinth.satellites.ac.cn/"
-languageCode = "zh-cn"
+languageCode = "zh-CN"
 title = "Noteworthy"
 theme = "noteworthy"
 enableRobotsTXT = true
-paginate = 4 # Set the number of posts to show before overflowing to the next page.
-summaryLength = 10 # Configure how long the post summary should be on the homepage.
+summaryLength = 10
 
-# Add your Google Analytics identifier: UA-XXXXXXXX-X
+[pagination]
+  pagerSize = 4
+
 # googleAnalytics = "G-NZ5FTGXLEF"
-googleAnalytics = ""
-
-# Add your Disqus shortname here.
 disqusShortname = ""
 
 [taxonomies]
   tag = "tags"
 
 [author]
-    name = "BG7ZDQ"
+  name = "BG7ZDQ"
 
-# Set to false to disallow raw HTML in markdown files
 [markup.goldmark.renderer]
-    unsafe = true
+  unsafe = true
 
 [params]
-    math = true
-    # Blog description at the top of the homepage. Supports markdown.
-    description = "Noteworthy is a minimalist Hugo theme, perfect for writers and bloggers."
-
-    showReadMore = true
-
-    # Set enableKofi to true to enable the Ko-fi support button. Add your Ko-fi ID to link to your account.
-    enableKofi = false
-    kofi = ""
-
-    # Add links to your accounts. Remove the ones you don't want to include.
-    # Main
-    email = "contact@satellites.ac.cn"
-    # facebook = "#"
-    twitter = "https://twitter.com/Hyacinth_Sat"
-    # instagram = "#"
-    # tumblr = "#"
-    # reddit = "#"
-    # pinterest = "#"
-    # youtube = "#"
-    # vimeo = "#"
-    # weibo = "#"
-    # vk = "#"
-    # linkedin = "#"
-
-    # Writing
-    # medium = "#"
-    # blogger = "#"
-    # wordpress = "#"
-
-    # Creative & Visual
-    # dribbble = "#"
-    # behance = "#"
-    # deviantart = "#"
-    # flickr = "#"
-
-    # Audio & Music
-    # soundcloud = "#"
-
-    # Programming
-    github = "https://github.com/HyacinthSat"
-    # stackoverflow = "#"
-    # gitlab = "#"
-    # codepen = "#"
-
-    # Academic
-    # googlescholar = "#"
-    # impactstory = "#"
-    # orcid = "#"
-
-    # Travel
-    # googlemaps = "#"
-    # tripadvisor = "#"
-
-# Menu links along the sidebar navigation.
-[[menu.main]]
-    identifier = "about"
-    name = "About"
-    url = "/about/"
-    weight = 1 # Weight is an integer used to sort the menu items. The sorting goes from smallest to largest numbers. If weight is not defined for each menu entry, Hugo will sort the entries alphabetically.
+  math = true
+  description = "Noteworthy is a minimalist Hugo theme, perfect for writers and bloggers."
+  showReadMore = true
+  email = "contact@satellites.ac.cn"
+  twitter = "https://twitter.com/Hyacinth_Sat"
+  github = "https://github.com/HyacinthSat"
 
 [[menu.main]]
-    identifier = "tags"
-    name = "Tags"
-    url = "/tags/"
-    weight = 2
+  identifier = "about"
+  name = "About"
+  url = "/about/"
+  weight = 1
 
 [[menu.main]]
-    name = "Archives"
-    identifier = "archives"
-    url = "/archives/"
-    weight = 3
+  identifier = "tags"
+  name = "Tags"
+  url = "/tags/"
+  weight = 2
 
-# Privacy configurations: https://gohugo.io/about/hugo-and-gdpr/
+[[menu.main]]
+  name = "Archives"
+  identifier = "archives"
+  url = "/archives/"
+  weight = 3
+
 [privacy]
   [privacy.disqus]
     disable = false
   [privacy.googleAnalytics]
     anonymizeIP = true
-    disable = false
-    respectDoNotTrack = false
-    useSessionStorage = false
   [privacy.instagram]
-    disable = false
-    simple = false
+    simple = true
   [privacy.twitter]
-    disable = false
-    enableDNT = false
-    simple = false
-  [privacy.vimeo]
-    disable = false
-    simple = false
+    simple = true
   [privacy.youtube]
-    disable = false
     privacyEnhanced = true
