--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ summaryLength = 10
 [pagination]
   pagerSize = 4
 
-# googleAnalytics = "G-NZ5FTGXLEF"
+googleAnalytics = "G-813GH0XF8X"
 disqusShortname = ""
 
 [taxonomies]
